# ParallelMind

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/mnist/: mnist_download.py
docker/: Dockerfile
examples/: CMakeLists.txt  main.cpp  mnist_main.cpp
src/: CMakeLists.txt
src/core/: Activation.h  Layer.cpp  Layer.h  Matrix.cu  Matrix.h  Network.cpp  Network.h  Node.cpp  Node.h  main.cpp
src/gpu/: hello_world.cu
src/utils/: NpyReader.cpp  NpyReader.hpp
tests/: CMakeLists.txt  main.cpp  test1.cpp  test_layer.cpp  test_matrix.cpp  test_node.cpp  test_npy_reader.cpp
